--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="finish_task">完成任务</string>
     <string name="finish_wish">实现心愿</string>
 
+    <string name="credits_text">现有积分</string>
+
     <string name="setting">设置</string>
     <string name="exit">退出</string>
     <string name="close">关闭</string>
